@@ -76,7 +76,10 @@ class GraphProperties(dict):
         # pass
         if self.ax_data is not None:
             for key in _requiredgraphproperties:
-                self["data_properties"][key] = artist.getp(self.ax_data, key)
+                # ax_data is an ErrorbarContainer
+                self["data_properties"][key] = artist.getp(
+                    self.ax_data[0], key
+                )
 
         if self.ax_fit is not None:
             for key in _requiredgraphproperties:
