@@ -291,3 +291,4 @@ in 0.1.13.
 - Update emcee vendored code.
 - Fix repr of Model
 - Fix several warnings during test run.
+- Add error bar plotting to refnx GUI.
